--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -8,4 +8,6 @@
 @import 'page__hero-section';
 @import 'our-commitment';
 @import 'section-quality';
-@import 'section-Our-headquarters'
+@import 'section-Our-headquarters';
+@import 'page-create-plan__hero-section';
+@import 'create-plan__how-it-work';
