--- a/scss/blocks/_section-collection.scss
+++ b/scss/blocks/_section-collection.scss
@@ -8,6 +8,22 @@
 }
 
 
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) { 
+  
+    .section-collection{
+        background-image: url("../../images/collection@2x.png");
+        
+        width: 1111px;
+    }
+} 
+
+
 .collection__list{
     display: flex;
     justify-content: space-around;
