--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -11,3 +11,5 @@
 @import 'section-Our-headquarters';
 @import 'page-create-plan__hero-section';
 @import 'create-plan__how-it-work';
+@import 'create-plan__service';
+
