--- a/scss/blocks/_container.scss
+++ b/scss/blocks/_container.scss
@@ -1,8 +1,9 @@
 .container{
-    width: 1280px;
+    max-width: 1320px;
+    width: 100%;
       margin: 0 auto;
-      padding: 0%;
-      border: 1px solid black;
+      padding: 0px 20px;
+    //   border: 1px solid black;
       
 }
 
